--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,16 @@
     position: absolute;
     top: 0;
 }
+
+.author-search-container {
+    position: relative;
+}
+
+.search-result {
+    position: absolute;
+    background-color: #FFF;
+    width: 100%;
+    border-radius: 0px 0px 2px 2px;
+    border: 1px solid #CCC;
+    box-shadow: 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%), 0px 5px 5px -3px rgb(0 0 0 / 20%);
+}
